--- a/final/index.html
+++ b/final/index.html
@@ -50,7 +50,7 @@
 
     <div class="home-container">
         <div class="home-child">
-            <img src="images/main1_img.jpg" alt="Home-1 Image" class="home-img" />
+            <img src="images/scooter_img.jpg" alt="Home-1 Image" class="home-img" />
             <p>
                 Motor-scooter riding around Cozumel is a fun and easy way for tourists
                 to see the island's beauty, take in the coastal views, and learn about
@@ -62,7 +62,7 @@
             </p>
         </div>
         <div class="home-child">
-            <img src="./img/homepic2.png" alt="Home-2 Image" class="home-img" />
+            <img src="images/eco_website.png" alt="Home-2 Image" class="home-img" />
             <p>
                 To minimize their impact on the island's ecosystem, some rental
                 companies may emphasize environmentally friendly practices by
@@ -73,7 +73,7 @@
             </p>
         </div>
         <div class="home-child">
-            <img src="./img/homepic3.png" alt="Home-3 Image" class="home-img" />
+            <img src="images/island_nature.jpg" alt="Home-3 Image" class="home-img" />
             <p>
                 Ecological Contemplations to minimize their impact on the island's
                 ecosystem, some rental companies may emphasize environmentally
@@ -87,11 +87,11 @@
         </div>
     </div>
 
-    <!--This is my Call To Action -->
+
     <div class="cta">
-        <a href="pages/reservations.html" class="my-button">RIDE &amp; RESERVE NOW</a>
+        <a href="reservations.html" class="my-button">RIDE &amp; RESERVE NOW</a>
     </div>
-    <!-- Weather section goes here -->
+
     <aside>
         <div class="my-weather-box">
             <div class="box-weather">
@@ -106,22 +106,22 @@
                 <div id="one-day-forecast"></div>
             </div>
         </div>
-        <script src="../scoots/js/main.js"></script>
+        <script src="scripts/main.js"></script>
     </aside>
 
-    <!-- This is my Footer section very important -->
+
     <footer>
         <nav>
             <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./pages/rentals.html">Rentals</a></li>
-                <li><a href="./pages/reservations.html">Reservations</a></li>
-                <li><a href="./pages/contact.html">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="rentals.html">Rentals</a></li>
+                <li><a href="reservations.html">Reservations</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
         <div class="footer-copyriht">
             &copy; Scoots Rentals. All rights reserved. <br />
-            CEO | Gerald CELESTIN | BYU-Idaho | WDD-230 Final Project 👍 Scoots Site
+            Brigham Aviles BYU-Idaho Final Project 👍 Scoots Site
         </div>
         <div id="footer_date"></div>
         <nav>
