--- a/final/contact.html
+++ b/final/contact.html
@@ -20,11 +20,11 @@
 </head>
 
 <body>
-    <!-- This is my Header section very nice-->
+
 
     <header>
         <div class="logo">
-            <img src="../img/logo.png" alt="Logos">
+            <img src="images/scoot_logo.jpg" alt="Logos" />
         </div>
         <nav>
             <ul>
@@ -65,19 +65,18 @@
         </div>
     </main>
 
-    <!-- This is my Footer section very important-->
     <footer>
         <nav>
             <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../pages/rentals.html">Rentals</a></li>
-                <li><a href="../pages/reservations.html">Reservations</a></li>
-                <li><a href="../pages/contact.html">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="rentals.html">Rentals</a></li>
+                <li><a href="reservations.html">Reservations</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
         <div class="footer-copyriht">
             &copy; Scoots Rentals. All rights reserved. <br>
-            CEO | Gerald CELESTIN | BYU-Idaho | WDD-230 Final Project 👍 Scoots Site
+            Brigham Aviles BYU-Idaho Final Project 👍 Scoots Site
         </div>
         <div id="footer_date"></div>
         <nav>
@@ -88,7 +87,7 @@
             </ul>
         </nav>
     </footer>
-    <script src="../js/main.js"></script>
+    <script src="scripts/main.js"></script>
 </body>
 
 </html>
