--- a/final/reservations.html
+++ b/final/reservations.html
@@ -20,10 +20,10 @@
 </head>
 
 <body>
-    <!--Here is my Header section really important -->
+
     <header>
         <div class="logo">
-            <img src="../img/logo.png" alt="Logos">
+            <img src="images/scoot_logo.jpg" alt="Logos" />
         </div>
 
         <nav>
@@ -100,14 +100,14 @@
         </section>
     </main>
 
-    <!--This is my Footer section really nice-->
+
     <footer>
         <nav>
             <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../pages/rentals.html">Rentals</a></li>
-                <li><a href="../pages/reservations.html">Reservations</a></li>
-                <li><a href="../pages/contact.html">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="rentals.html">Rentals</a></li>
+                <li><a href="reservations.html">Reservations</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
         <div class="footer-copyriht">
@@ -123,7 +123,7 @@
             </ul>
         </nav>
     </footer>
-    <script src="../js/main.js"></script>
+    <script src="scripts/main.js"></script>
 </body>
 
 </html>
