--- a/final/index.html
+++ b/final/index.html
@@ -37,9 +37,7 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
-        <div class="contact-nav">
-            Contact: (+509) 36 04 72 53 | celestingerald31@gmail.com
-        </div>
+
     </header>
     <div class="heading-one">
         <h1>
@@ -121,7 +119,10 @@
         </nav>
         <div class="footer-copyriht">
             &copy; Scoots Rentals. All rights reserved. <br />
-            Brigham Aviles BYU-Idaho Final Project 👍 Scoots Site
+            Brigham Aviles BYU-Idaho Final Project Scoots Site
+        </div>
+        <div class="contact-nav">
+            Contact: (+509) 36 04 72 53 | celestingerald31@gmail.com
         </div>
         <div id="footer_date"></div>
         <nav>
