--- a/final/reservations.html
+++ b/final/reservations.html
@@ -34,9 +34,7 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
-        <div class="contact-nav">
-            Contact: (+509) 36 04 72 53 | celestingerald31@gmail.com
-        </div>
+
     </header>
 
     <main id="main">
@@ -112,7 +110,10 @@
         </nav>
         <div class="footer-copyriht">
             &copy; Scoots Rentals. All rights reserved. <br>
-            CEO | Gerald CELESTIN | BYU-Idaho | WDD-230 Final Project 👍 Scoots Site
+            Brigham Aviles BYU-Idaho Final Project Scoots Site
+        </div>
+        <div class="contact-nav">
+            Contact: (+509) 36 04 72 53 | celestingerald31@gmail.com
         </div>
         <div id="footer_date"></div>
         <nav>
